# robot_msgs

./: CMakeLists.txt  CMakeLists.txt~  package.xml~
msg/: detectedObject.msg~  imagePosition.msg  imagePosition.msg~
